--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
  <footer id="contact" class="site-footer">
         <div class="container footer-inner">
-            <p>Des questions , envie d'un bouquet unique? contctez-nous!</p>
+            <p>Des questions , envie d'un bouquet unique? contactez-nous!</p>
 
              <!-- ✅ Infos de contact -->
     <p>📞 Téléphone : +225 07 77 41 60 01</p>
